tests/baselines/reference/importEmptyFromModuleNotExisted.errors.txt
importEmptyFromModuleNotExisted.ts(1,16): error TS2792: Cannot find module 'module-not-existed'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== importEmptyFromModuleNotExisted.ts (1 errors) ====
    import {} from 'module-not-existed'
                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'module-not-existed'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    